# tau

./: .gitignore  AGENTS.md  Cargo.toml  MISSING_TOOLS.md  PLAN.md  README.md
.claude/skills/tau/: SKILL.md
crates/tau-agent/: API.md  Cargo.toml  README.md
crates/tau-agent/src/: actor.rs  agent.rs  agent_manager.rs  approval.rs  builder.rs  command.rs  compaction.rs  config.rs  context.rs  conversation.rs  error.rs  events.rs  handle.rs  interaction.rs  lib.rs  logic.rs  loop_state.rs  manager.rs  overflow.rs  plan.rs  state.rs  stream.rs  subagent.rs  test_utils.rs  tool.rs  tool_executor.rs  transcript.rs  transport.rs  worktree.rs
crates/tau-agent/src/core/: actor.rs  approval.rs  builder.rs  command.rs  compaction.rs  config.rs  handle.rs  interaction.rs  mod.rs  overflow.rs  state.rs  stream.rs  tool.rs  transitions.rs  transport.rs
crates/tau-agent/src/core/actor/: approval.rs  drain.rs  executing.rs
crates/tau-agent/src/core/compaction/: cut_point.rs  file_ops.rs  prompts.rs
crates/tau-agent/src/fleet/: bus.rs  lifecycle.rs  manager.rs  mod.rs  registry.rs  result.rs  snapshot.rs  transcript.rs  worktree.rs
crates/tau-agent/src/prompts/: agent_executor.md  agent_plan.md  agents.md  mod.rs  output_acolyte.md
crates/tau-agent/src/types/: conversation.rs  error.rs  events.rs  health.rs  info.rs  mod.rs
crates/tau-agent/tests/: approval.rs  compaction_custom_instructions.rs  concurrency.rs  console_lines.rs  context_stats.rs  edge_cases.rs  errors.rs  file_changed.rs  fleet.rs  follow_ups.rs  harness.rs  interrupt.rs  lifecycle.rs  list_tools.rs  plan.rs  smoke.rs  snapshot.rs  step_events.rs  subagent_lifecycle.rs  subagents.rs  tools.rs  transport_input.rs
crates/tau-ai/: Cargo.toml
crates/tau-ai/src/: error.rs  lib.rs  messages.rs  models.rs  models_generated.rs  stream.rs  types.rs
crates/tau-ai/src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs
crates/tau-ai/src/providers/anthropic/: convert.rs  mod.rs  request.rs  streaming.rs  tests.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: auth.rs  cli.rs  config.rs  context.rs  interactive.rs  main.rs  prompts.rs  run_command.rs  session.rs  subagents.rs  ui.rs  utils.rs
crates/tau-cli/src/commands/: branch.rs  mcp.rs  mod.rs  model.rs  plan.rs  session.rs  thinking.rs
crates/tau-cli/src/driver/: frontend.rs  mod.rs  session.rs
crates/tau-cli/src/frontends/: mod.rs  stdout.rs
crates/tau-cli/src/lsp/: client.rs  mod.rs  servers.rs  tool.rs
crates/tau-cli/src/oauth/: anthropic.rs  mod.rs  storage.rs
crates/tau-cli/src/prompts/: actions.md  agent_executor.md  agent_explore.md  agent_general.md  intro.md  mod.rs  output_efficiency.md  style.md  system.md  tasks.md  tasks_acolyte.md
crates/tau-cli/src/session/: branch.rs  cli.rs  mod.rs  store.rs
crates/tau-cli/src/tools/: agent.rs  ask.rs  bash.rs  edit.rs  glob.rs  grep.rs  list.rs  lsp.rs  mod.rs  read.rs  send_message.rs  web_fetch.rs  write.rs
crates/tau-cli/src/ui/: agents.rs  constants.rs  events.rs  frontend.rs  input.rs  mod.rs  render.rs  state.rs  theme.rs  types.rs
crates/tau-cli/src/ui/widgets/: input_box.rs  markdown.rs  message_list.rs  mod.rs  selector.rs  spinner.rs
crates/tau-desk/: Cargo.toml
crates/tau-desk/src/: activity.rs  brief.rs  card.rs  desk.rs  draft.rs  error.rs  event.rs  handler.rs  lib.rs  mute.rs  now.rs  ops.rs  provenance.rs  scheduler.rs  source.rs  storage.rs  token.rs  tombstone.rs
crates/tau-desk/src/tools/: add_activity.rs  attach_to_card.rs  enqueue_draft.rs  mod.rs  move_card.rs  retire_card.rs  update_brief.rs  update_take.rs  upsert_card.rs
crates/tau-desk/tests/: integration_morning_scan.rs  integration_plt312_walkthrough.rs  integration_workday.rs
crates/tau-history/: Cargo.toml
crates/tau-history/src/: branch.rs  history.rs  lib.rs  objects.rs  repository.rs
crates/tau-history/tests/: repository.rs  scenarios.rs
crates/tau-session/: Cargo.toml
crates/tau-session/src/: info.rs  lib.rs  manager.rs  snapshot.rs  storage.rs
crates/tau-session/tests/: lifecycle.rs
crates/tau-tools/: Cargo.toml
crates/tau-tools/src/: agent.rs  ask.rs  bash.rs  console.rs  diff.rs  diff_validation.rs  edit.rs  glob.rs  grep.rs  lib.rs  list.rs  plan.rs  read.rs  send_message.rs  step.rs  subagent_report.rs  submit_plan.rs  web_fetch.rs  write.rs
crates/tau-tools/src/lsp/: tool.rs
crates/tau-tools/src/mcp/: config.rs  content.rs  manager.rs  mod.rs  naming.rs  risk.rs  schema.rs  tool.rs
crates/tau-tools/tests/: mcp_integration.rs
crates/tau-tui/: Cargo.toml
crates/tau-tui/src/: app.rs  input.rs  lib.rs  theme.rs
crates/tau-tui/src/widgets/: input_box.rs  markdown.rs  message_list.rs  mod.rs  selector.rs  spinner.rs
xtask/: Cargo.toml  overrides.json
xtask/src/: main.rs
