[workspace]
resolver = "2"
members = [
    "crates/tau-ai",
    "crates/tau-agent",
    "crates/tau-tui",
    "crates/tau-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/badlogic/pi-mono"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3.31"
async-stream = "0.3.6"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# TUI
ratatui = "0.30.0-beta.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
dirs = "6.0.0"
similar = "2.7.0"
regex = "1.12"
toml = "0.9"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# Internal crates
tau-ai = { path = "crates/tau-ai" }
tau-agent = { path = "crates/tau-agent" }
tau-tui = { path = "crates/tau-tui" }
