[package]
name = "tau-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Actor-based agent runtime with tool execution, context compaction, and subagent management"

[dependencies]
tau-ai = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
schemars = { workspace = true }

thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

[features]
test-utils = []

[dev-dependencies]
tau-agent = { path = ".", features = ["test-utils"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
