[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI-powered coding agent CLI"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-ai = { workspace = true }
tau-agent = { workspace = true }
tau-tui = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
similar = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = "0.7"
reqwest = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.3"
urlencoding = "2.1"
