[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI-powered coding agent CLI"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-ai = { workspace = true }
tau-agent = { workspace = true }
tau-tools = { workspace = true, features = ["lsp"] }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
similar = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = "0.7"
reqwest = { workspace = true }
sha2 = "0.11"
base64 = "0.22"
getrandom = "0.4"
urlencoding = "2.1"
htmd = { workspace = true }
url = { workspace = true }
unicode-width = "0.2"
textwrap = "0.16"
pulldown-cmark = { version = "0.13.3", default-features = false }

[dev-dependencies]
tau-agent = { workspace = true, features = ["test-utils"] }
