[package]
name = "tau-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Built-in tools for the tau coding agent"

[dependencies]
tau-ai = { workspace = true }
tau-agent = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
strsim = { workspace = true }
htmd = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

# LSP feature: optional language-server-based code intelligence tool.
lsp-types = { version = "0.97", optional = true }
anyhow = { workspace = true, optional = true }
urlencoding = { version = "2.1", optional = true }

# MCP feature: tools provided by Model Context Protocol servers.
rmcp = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[features]
default = []
lsp = ["dep:lsp-types", "dep:anyhow", "dep:urlencoding"]
mcp = ["dep:rmcp", "dep:jsonschema", "dep:sha2", "dep:anyhow"]

[dev-dependencies]
tau-agent = { workspace = true, features = ["test-utils"] }
# In-process fixture MCP server for integration tests.
rmcp = { workspace = true, features = ["server", "macros", "transport-async-rw"] }
